environments/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: repo-template
  labels:
    app.kubernetes.io/managed-by: flux
    environment: prod
