environments/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prflow.example.com.
spec:
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: flux-system
  hostnames:
    - "prflow.example.com"
  rules:
    - backendRefs:
        - kind: Service
          name: app
          port: 80
